The IVS in this project will make it possible for people with pre-2015 cars to have the same opportunity and the same safety net as eCall provides with an aftermarket solution.

@section Changelog

=====================================
Version 0.201 - 2014/12/03 by Kenneth
=====================================
New Features, Improvements
--------------------------

Fixed Bugs, Changes
-------------------
- Design and structure changes: 
   + Added new folder "application" which holds the scheduler.h / scheduler.c, timer.c / timer.h, 
     run.c and vroom_config.h. 
   + Added scheduler_pause();, scheduler_resume(bool __clear_TIFR); and scheduler_halt(); functions in scheduler.c
- Cleaned for unused includes

ToDo
----		
- MISRA check all files
- Doxygen missing in following files:
   + scheduler.c
   + test_module_sensors.c / test_module_sensors.h
   + test_module_car_panel.c / test_module_car_panel.h
   + test_module_uart.c / test_module_uart.h
   + time.c / time.h
- Doxygen proofing in all files  
- !note CREG unsolicited response and Call Ready sometimes still miss at 1KHz
- !note If PIN is requered, wait for "+CPIN: SIM PIN" response (Hardcoded with 1 sec delay)
- !note NEW PROBLEM appers often when running 50hz including LCD: CREG response is lost. It still writes <LF><CR> in console though.


==================================
Version 0.200 - 2014/12/03 by Andi
==================================
New Features, Improvements
--------------------------
- Changed sensor_scheduler to scheduler.h/ scheduler.c so that it is the scheduler for the whole system
- Added detection logic to scheduler.c
- Added solicited CREG check to _wait_for_connection function to make sure system does not freeze if an unsolicited
   CREG command should be missed

Fixed Bugs, Changes
-------------------
- Fixed unstability in communication with sim908 module by pausing scheduler timer in the _SIM908_callback function